--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: screen_loader
-description: Easy to use mixin ScreenLoader, which will hadle the loading on the screen. You can customise the loading as well.
+description: Easy to use mixin ScreenLoader, which will handle the loading on the screen. You can customise the loading as well.
 version: 1.0.3
 homepage: https://github.com/arnold-parge/screen_loader
 
